# Klocuch

./: instability.mov
arm_control/: CMakeLists.txt  main.c
arm_control/include/: Arm.h  Servo.h
arm_control/src/: Arm.c  Servo.c
data_transfer/receiver/: rcvr.py  servo_bt_driver.py
data_transfer/src/: lib.py  logic.py  painter.py
data_transfer/transmitter/: mcp3008.py  tsmtr.py
src/: app.py  painter.py
